2005-09-29  Miguel de Icaza  <miguel@novell.com>

	* Add ComVisible(true) to all the classes that needed it.

	* Removed documentation from DictionaryBase.cs and moved it to
	Monodoc. 

	* ArrayList.cs: Fixed signature for constructor, parameter names
	are normative.

	* CollectionBase.cs: Add a couple of missing methods. 

2005-09-01  Atsushi Enomoto  <atsushi@ximian.com>

	* Hashtable.cs : SyncHashtable.GetEnumerator() returned keys instead
	  of entries (DictionaryEntry). Fixed bug #75790.

2005-09-01  Atsushi Enomoto  <atsushi@ximian.com>

	* SortedList.cs : Even though the key/value pair being set are
	  identical to the existing one, it causes snapshot out of sync.
	  Fixed bug #59694.

2005-07-21  Lluis Sanchez Gual  <lluis@novell.com>

	* CollectionBase.cs: Lazily create the inner list. MS.NET does
	it and we need to do the same for the sake of serialization
	interoperability. Fixes bug #75575. 

2005-07-17  Florian Gross  <flgr@ccan.de>

	* ArrayList.cs: pass along index offset in RangedArrayList:ToArray.
	Fixes bug #75545

2005-06-23  Ben Maurer  <bmaurer@ximian.com>

	* Queue.cs: Use the enumerator rather than copy to in the
	ctor. This makes us more compat with msft, for example, when
	passing a bit array

	* Stack.cs: ditto

2005-06-23  Martin Baulig  <martin@ximian.com>

	* IKeyComparer.cs: Removed.

2005-06-12  David Waite  <dwaite@gmail.com>

	* Hashtable.cs: make prime-related functions internal so generic
	Dictionary can use them.
	* IEqualityComparer.cs: add non-generic IEqualityComparer interface

2005-06-06  Zoltan Varga  <vargaz@freemail.hu>

	* Hashtable.cs: Add some missing 2.0 attributes.

2005-05-26  Ben Maurer  <bmaurer@ximian.com>

	* Queue.cs (grow): fix 61919.

2005-05-09  Atsushi Enomoto  <atsushi@ximian.com>

	* Stack.cs : empty_stack.CopyTo(empty_array, 0) should be allowed.

2005-02-21  Zoltan Varga  <vargaz@freemail.hu>

	* Hashtable.cs: Add net 2.0 ReliabilityContractAttributes.

2005-02-19  Kazuki Oikawa  <kazuki@panicode.com>
